<resources>
    <string name="app_name">华创音乐</string>

    <!--首页菜单-->
    <string name="menu_local">本地音乐</string>
    <string name="menu_recent">最近播放</string>
    <string name="menu_down">下载管理</string>

    <!--本地音乐标题栏-->
    <string name="action_local_search">搜索本地歌曲</string>
    <string name="action_local_more">更多</string>
    <string name="action_local_scan">扫描本地音乐</string>
    <string name="action_local_order">选择排序方式</string>

    <!--本地音乐tab-->
    <string name="local_tab_single_song">单曲</string>
    <string name="local_tab_author">歌手</string>
    <string name="local_tab_album">专辑</string>
    <string name="local_tab_file_dir">文件夹</string>

    <!--最近播放标题栏-->
    <string name="action_recent_clear">清除</string>

    <!--下载管理标题栏-->
    <string name="action_down_order">排序</string>
    <string name="action_down_search">搜索</string>

    <!--下载管理tab-->
    <string name="down_tab_downed">已下载</string>
    <string name="down_tab_downing">下载中</string>

    <!--无本地音乐提示-->
    <string name="no_music">暂无本地音乐</string>
    <string name="no_music_button">一键扫描</string>

    <!--默认字符串-->
    <string name="default_title">未知歌名</string>
    <string name="default_author">未知歌手</string>
    <string name="default_album">未知专辑</string>
    <string name="default_dir_name">未知文件夹</string>
    <string name="default_dir_path">未知路径</string>
    <string name="default_time">00:00</string>
    <string name="default_un_know">\???</string>

    <!--扫描音乐首页-->
    <string name="scan_music_title">扫描音乐</string>
    <string name="scan_music_whole">全盘扫描</string>
    <string name="scan_music_custom">自定义扫描</string>
    <string name="scan_music_setting">扫描设置</string>

    <!--扫描设置页面-->
    <string name="scan_setting_title">扫描设置</string>
    <string name="scan_setting_confirm">确定</string>
    <string name="scan_setting_filter_title">大小过滤</string>
    <string name="scan_setting_filter_dec">过滤小于60秒的音频文件</string>
    <string name="scan_setting_filter_dir_title">扫描目录过滤</string>

    <!--自定义扫描页面-->
    <string name="scan_custom_title">自定义扫描</string>
    <string name="scan_custom_all">全选</string>
    <string name="scan_custom_all_cancel">取消全选</string>
    <string name="scan_custom_start">立即扫描</string>

    <!--扫描界面-->
    <string name="scan_close">关闭</string>
    <string name="scan_complete_prefix">共扫描到</string>
    <string name="scan_complete_suffix">歌曲</string>
    <string name="scan_cancel">取消扫描</string>
    <string name="scan_retry">重新扫描</string>
    <string name="scan_back">回到我的音乐</string>

    <!--歌词选择页面-->
    <string name="select_lrc_title">选择歌词</string>
    <string name="select_lrc_name">歌曲 : </string>
    <string name="select_lrc_author">歌手 : </string>
    <string name="select_lrc_use">使用</string>
    <string name="select_lrc_using">使用中</string>

</resources>
