<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scan_music_phone"
        app:layout_constraintBottom_toTopOf="@+id/btn_whole"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scan_music_search"
        app:layout_constraintBottom_toBottomOf="@id/iv_phone"
        app:layout_constraintLeft_toLeftOf="@id/iv_phone"
        app:layout_constraintRight_toRightOf="@id/iv_phone"
        app:layout_constraintTop_toTopOf="@id/iv_phone"
        />

    <Button
        android:id="@+id/btn_whole"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/scan_music_whole"
        android:background="@drawable/selector_button_scan_whole"
        app:layout_constraintBottom_toTopOf="@+id/btn_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_phone"/>

    <Button
        android:id="@+id/btn_custom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/scan_music_custom"
        android:background="@drawable/selector_button_scan_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_whole"/>

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_setting"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_setting"
        app:layout_constraintRight_toLeftOf="@+id/tv_setting"
        app:layout_constraintTop_toTopOf="@+id/tv_setting"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/scan_music_setting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_custom"/>


</android.support.constraint.ConstraintLayout>